# which-shell

./: .gitignore  Cargo.toml  README.md  justfile  package.json  readme.md  tsconfig.json
.github/workflows/: release.yml  test.yml
src/: lib.rs  main.rs  unix.rs  windows.rs
ts/: index.ts
