[package]
name = "which-shell"
version = "0.1.4"
edition = "2021"
license = "MIT"
description = "which-shell"
repository = "https://github.com/ahaoboy/which-shell"
homepage = "https://github.com/ahaoboy/which-shell"
authors = ["ahaoboy"]
include = ["/src", "/Cargo.toml", "/README.md"]

[dependencies]
regex = "1"

[target.'cfg(target_os = "windows")'.dependencies]
wmi="0.17"
serde = { version = "1", features = ["derive"] }