[package]
name = "which-shell"
version = "0.1.5"
edition = "2024"
license = "MIT"
description = "which-shell"
repository = "https://github.com/ahaoboy/which-shell"
homepage = "https://github.com/ahaoboy/which-shell"
authors = ["ahaoboy"]
include = ["/src", "/Cargo.toml", "/README.md"]

[dependencies]
regex = "1"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Threading",
    "Win32_Foundation",
] }
