[package]
name = "which-shell"
version = "0.1.5"
edition = "2024"
license = "MIT"
description = "which-shell"
repository = "https://github.com/ahaoboy/which-shell"
homepage = "https://github.com/ahaoboy/which-shell"
authors = ["ahaoboy"]
include = ["/src", "/Cargo.toml", "/README.md"]

[dependencies]
regex = {version = "1", default-features = false}

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62", features = [
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Threading",
] }

[profile.release]
debug = false
lto = true
strip = true
opt-level = 3
codegen-units = 1

[profile.bloaty]
debug = true
lto = false
strip = false
inherits = 'release'
